libglycin/include/glycin.h

G_BEGIN_DECLS
#define GLY_TYPE_LOADER (gly_loader_get_type())
G_DECLARE_FINAL_TYPE(GlyLoader, gly_loader, GLY, LOADER, GObject)
#define GLY_TYPE_IMAGE (gly_image_get_type())
G_DECLARE_FINAL_TYPE(GlyImage, gly_image, GLY, IMAGE, GObject)
#define GLY_TYPE_FRAME_REQUEST (gly_frame_request_get_type())
G_DECLARE_FINAL_TYPE(GlyFrameRequest, gly_frame_request, GLY, FRAME_REQUEST, GObject)
#define GLY_TYPE_FRAME (gly_frame_get_type())
G_DECLARE_FINAL_TYPE(GlyFrame, gly_frame, GLY, FRAME, GObject)
#define GLY_TYPE_FRAME_DETAILS (gly_frame_details_get_type())
GType gly_sandbox_selector_get_type(void);
typedef enum
{
    GLY_MEMORY_SELECTION_B8G8R8A8_PREMULTIPLIED = (1 << 0),
    GLY_MEMORY_SELECTION_A8R8G8B8_PREMULTIPLIED = (1 << 1),
    GLY_MEMORY_SELECTION_R8G8B8A8_PREMULTIPLIED = (1 << 2),
    GLY_MEMORY_SELECTION_B8G8R8A8 = (1 << 3),
    GLY_MEMORY_SELECTION_A8R8G8B8 = (1 << 4),
    GLY_MEMORY_SELECTION_R8G8B8A8 = (1 << 5),
    GLY_MEMORY_SELECTION_A8B8G8R8 = (1 << 6),
    GLY_MEMORY_SELECTION_R8G8B8 = (1 << 7),
    GLY_MEMORY_SELECTION_B8G8R8 = (1 << 8),
    GLY_MEMORY_SELECTION_R16G16B16 = (1 << 9),
    GLY_MEMORY_SELECTION_R16G16B16A16_PREMULTIPLIED = (1 << 10),
    GLY_MEMORY_SELECTION_R16G16B16A16 = (1 << 11),
    GLY_MEMORY_SELECTION_R16G16B16_FLOAT = (1 << 12),
    GLY_MEMORY_SELECTION_R16G16B16A16_FLOAT = (1 << 13),
    GLY_MEMORY_SELECTION_R32G32B32_FLOAT = (1 << 14),
    GLY_MEMORY_SELECTION_R32G32B32A32_FLOAT_PREMULTIPLIED = (1 << 15),
    GLY_MEMORY_SELECTION_R32G32B32A32_FLOAT = (1 << 16),
    GLY_MEMORY_SELECTION_G8A8_PREMULTIPLIED = (1 << 17),
    GLY_MEMORY_SELECTION_G8A8 = (1 << 18),
    GLY_MEMORY_SELECTION_G8 = (1 << 19),
    GLY_MEMORY_SELECTION_G16A16_PREMULTIPLIED = (1 << 20),
    GLY_MEMORY_SELECTION_G16A16 = (1 << 21),
    GLY_MEMORY_SELECTION_G16 = (1 << 22),
} GlyMemoryFormatSelection;
GType gly_memory_format_selection_get_type(void);
typedef enum
{
    GLY_PHYSICAL_DIMENSION_UNIT_INCH = 1,
    GLY_PHYSICAL_DIMENSION_UNIT_PICA = 2,
    GLY_PHYSICAL_DIMENSION_UNIT_POINT = 3,
    GLY_PHYSICAL_DIMENSION_UNIT_METER = 4,
    GLY_PHYSICAL_DIMENSION_UNIT_CENTIMETER = 5,
    GLY_PHYSICAL_DIMENSION_UNIT_MILLIMETER = 6,
} GlyPhysicalDimensionUnit;
GType gly_physical_dimension_unit_get_type(void);
GlyLoader *gly_loader_new(GFile *file);
GlyLoader *gly_loader_new_for_stream(GInputStream *stream);
GlyLoader *gly_loader_new_for_bytes(GBytes *bytes);
GStrv gly_loader_get_mime_types(void);
void gly_loader_get_mime_types_async(
    GCancellable *cancellable,
    GAsyncReadyCallback callback,
    gpointer user_data);
GStrv gly_loader_get_mime_types_finish(
    GAsyncResult *result,
    GError **error);
void gly_loader_set_sandbox_selector(GlyLoader *loader,
                                     GlySandboxSelector sandbox_selector);
void gly_loader_set_accepted_memory_formats(GlyLoader *loader,
                                            GlyMemoryFormatSelection memory_format_selection);
void gly_loader_set_apply_transformations(GlyLoader *loader,
                                          gboolean apply_transformations);
void gly_loader_set_color_convert_icc_srgb(GlyLoader *loader,
                                           gboolean convert);
GlyImage *gly_loader_load(GlyLoader *loader,
                          GError **error);
void gly_loader_load_async(GlyLoader *loader,
                           GCancellable *cancellable,
                           GAsyncReadyCallback callback,
                           gpointer user_data);
GlyImage *gly_loader_load_finish(GlyLoader *loader,
                                 GAsyncResult *result,
                                 GError **error);
GlyFrameRequest *gly_frame_request_new(void);
void gly_frame_request_set_scale(GlyFrameRequest *frame_request,
                                 uint32_t width,
                                 uint32_t height);
void gly_frame_request_set_loop_animation(GlyFrameRequest *frame_request,
                                          gboolean loop_animation);
GlyFrame *gly_image_next_frame(GlyImage *image,
                               GError **error);
void gly_image_next_frame_async(GlyImage *image,
                                GCancellable *cancellable,
                                GAsyncReadyCallback callback,
                                gpointer user_data);
GlyFrame *gly_image_next_frame_finish(GlyImage *image,
                                      GAsyncResult *result,
                                      GError **error);
GlyFrame *gly_image_get_specific_frame(GlyImage *image,
                                       GlyFrameRequest *frame_request,
                                       GError **error);
void gly_image_get_specific_frame_async(GlyImage *image,
                                        GlyFrameRequest *frame_request,
                                        GCancellable *cancellable,
                                        GAsyncReadyCallback callback,
                                        gpointer user_data);
GlyFrame *gly_image_get_specific_frame_finish(GlyImage *image,
                                              GAsyncResult *result,
                                              GError **error);
const char *gly_image_get_mime_type(GlyImage *image);
uint32_t gly_image_get_width(GlyImage *image);
uint32_t gly_image_get_height(GlyImage *image);
gchar *
gly_image_get_metadata_key_value(GlyImage *image,
                                 const gchar *key);
GStrv gly_image_get_metadata_keys(GlyImage *image);
uint16_t gly_image_get_transformation_orientation(GlyImage *image);
typedef enum
{
    GLY_MEMORY_B8G8R8A8_PREMULTIPLIED,
    GLY_MEMORY_A8R8G8B8_PREMULTIPLIED,
    GLY_MEMORY_R8G8B8A8_PREMULTIPLIED,
    GLY_MEMORY_B8G8R8A8,
    GLY_MEMORY_A8R8G8B8,
    GLY_MEMORY_R8G8B8A8,
    GLY_MEMORY_A8B8G8R8,
    GLY_MEMORY_R8G8B8,
    GLY_MEMORY_B8G8R8,
    GLY_MEMORY_R16G16B16,
    GLY_MEMORY_R16G16B16A16_PREMULTIPLIED,
    GLY_MEMORY_R16G16B16A16,
    GLY_MEMORY_R16G16B16_FLOAT,
    GLY_MEMORY_R16G16B16A16_FLOAT,
    GLY_MEMORY_R32G32B32_FLOAT,
    GLY_MEMORY_R32G32B32A32_FLOAT_PREMULTIPLIED,
    GLY_MEMORY_R32G32B32A32_FLOAT,
    GLY_MEMORY_G8A8_PREMULTIPLIED,
    GLY_MEMORY_G8A8,
    GLY_MEMORY_G8,
    GLY_MEMORY_G16A16_PREMULTIPLIED,
    GLY_MEMORY_G16A16,
    GLY_MEMORY_G16,
} GlyMemoryFormat;
GType gly_memory_format_get_type(void);
typedef enum
{
    GLY_COLOR_MODE_SRGB = 1,
    GLY_COLOR_MODE_CICP = 2,
    GLY_COLOR_MODE_ICC_PROFILE = 3,
} GlyColorMode;
GType gly_color_mode_get_type(void);
gboolean gly_memory_format_has_alpha(GlyMemoryFormat memory_format);
gboolean gly_memory_format_is_premultiplied(GlyMemoryFormat memory_format);
int64_t gly_frame_get_delay(GlyFrame *frame);
uint32_t gly_frame_get_width(GlyFrame *frame);
uint32_t gly_frame_get_height(GlyFrame *frame);
uint32_t gly_frame_get_stride(GlyFrame *frame);
GBytes *gly_frame_get_buf_bytes(GlyFrame *frame);
GlyMemoryFormat gly_frame_get_memory_format(GlyFrame *frame);
GlyFrameDetails *gly_frame_get_details(GlyFrame *frame);
typedef struct
{
    uint8_t color_primaries;
    uint8_t transfer_characteristics;
    uint8_t matrix_coefficients;
    uint8_t video_full_range_flag;
} GlyCicp;
GType gly_cicp_get_type(void);
GlyCicp *gly_cicp_copy(GlyCicp *cicp);
void gly_cicp_free(GlyCicp *cicp);
G_DEFINE_AUTOPTR_CLEANUP_FUNC(GlyCicp, gly_cicp_free)
GlyColorMode gly_frame_get_color_mode(GlyFrame *frame);
GlyCicp *gly_frame_get_color_cicp(GlyFrame *frame);
GBytes *gly_frame_get_color_icc_profile(GlyFrame *frame);
GlyPixelDensity *gly_frame_details_get_pixel_density(GlyFrameDetails *frame_details);
typedef enum
{
    GLY_LOADER_ERROR_FAILED,
    GLY_LOADER_ERROR_UNKNOWN_IMAGE_FORMAT,
    GLY_LOADER_ERROR_NO_MORE_FRAMES,
} GlyLoaderError;
GQuark gly_loader_error_quark(void) G_GNUC_CONST;
GType gly_loader_error_get_type(void);
G_DECLARE_FINAL_TYPE(GlyNewFrame, gly_new_frame, GLY, NEW_FRAME, GObject)
gboolean gly_new_frame_set_color_icc_profile(GlyNewFrame *new_frame, GBytes *icc_profile);
gboolean gly_new_frame_set_pixel_density(GlyNewFrame *new_frame,
                                         GlyPixelDensity *pixel_density);
G_DECLARE_FINAL_TYPE(GlyEncodedImage, gly_encoded_image, GLY, ENCODED_IMAGE, GObject)
GBytes *gly_encoded_image_get_data(GlyEncodedImage *encoded_image);
G_DECLARE_FINAL_TYPE(GlyCreator, gly_creator, GLY, CREATOR, GObject)
GlyCreator *gly_creator_new(const gchar *mime_type,
                            GError **error);
GlyNewFrame *gly_creator_add_frame(GlyCreator *creator,
                                   uint32_t width,
                                   uint32_t height,
                                   GlyMemoryFormat memory_format,
                                   GBytes *texture,
                                   GError **error);
GlyNewFrame *gly_creator_add_frame_with_stride(GlyCreator *creator,
                                               uint32_t width,
                                               uint32_t height,
                                               uint32_t stride,
                                               GlyMemoryFormat memory_format,
                                               GBytes *texture,
                                               GError **error);
GlyEncodedImage *gly_creator_create(GlyCreator *image,
                                    GError **error);
void gly_creator_create_async(GlyCreator *creator,
                              GCancellable *cancellable,
                              GAsyncReadyCallback callback,
                              gpointer user_data);
GlyEncodedImage *gly_creator_create_finish(GlyCreator *creator,
                                           GAsyncResult *result,
                                           GError **error);
gboolean gly_creator_add_metadata_key_value(GlyCreator *creator,
                                            const gchar *key,
                                            const gchar *value);
gboolean gly_creator_set_encoding_quality(GlyCreator *creator,
                                          uint8_t quality);
gboolean gly_creator_set_encoding_compression(GlyCreator *creator,
                                              uint8_t compression);
gboolean gly_creator_set_sandbox_selector(GlyCreator *creator,
                                          GlySandboxSelector sandbox_selector);