libglycin-rebind/libglycin-rebind/sys/src/lib.rs


impl ::std::fmt::Debug for GlyLoader {
    fn fmt(&self, f: &mut ::std::fmt::Formatter) -> ::std::fmt::Result {
        f.debug_struct(&format!("GlyLoader @ {self:p}")).finish()
    }
}

#[repr(C)]
#[allow(dead_code)]
pub struct GlyNewFrame {
    _data: [u8; 0],
    _marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

impl ::std::fmt::Debug for GlyNewFrame {
    fn fmt(&self, f: &mut ::std::fmt::Formatter) -> ::std::fmt::Result {
        f.debug_struct(&format!("GlyNewFrame @ {self:p}")).finish()
    }
}

#[repr(C)]
#[allow(dead_code)]
pub struct GlyPixelDensity {
    _data: [u8; 0],
    _marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

impl ::std::fmt::Debug for GlyPixelDensity {
    fn fmt(&self, f: &mut ::std::fmt::Formatter) -> ::std::fmt::Result {
        f.debug_struct(&format!("GlyPixelDensity @ {self:p}"))
            .finish()
    }
}

unsafe extern "C" {

    //=========================================================================
    // GlyColorMode
    //=========================================================================
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_color_mode_get_type() -> GType;

    //=========================================================================
    // GlyLoaderError
    //=========================================================================
    pub fn gly_loader_error_get_type() -> GType;
    pub fn gly_loader_error_quark() -> glib::GQuark;

    //=========================================================================
    // GlyMemoryFormat
    //=========================================================================
    pub fn gly_memory_format_get_type() -> GType;
    pub fn gly_memory_format_has_alpha(memory_format: GlyMemoryFormat) -> gboolean;
    pub fn gly_memory_format_is_premultiplied(memory_format: GlyMemoryFormat) -> gboolean;

    //=========================================================================
    // GlyPhysicalDimensionUnit
    //=========================================================================
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_physical_dimension_unit_get_type() -> GType;

    //=========================================================================
    // GlySandboxSelector
    //=========================================================================
    pub fn gly_sandbox_selector_get_type() -> GType;

    //=========================================================================
    // GlyMemoryFormatSelection
    //=========================================================================
    pub fn gly_memory_format_selection_get_type() -> GType;

    //=========================================================================
    // GlyCicp
    //=========================================================================
    pub fn gly_cicp_get_type() -> GType;
    pub fn gly_cicp_copy(cicp: *mut GlyCicp) -> *mut GlyCicp;
    pub fn gly_cicp_free(cicp: *mut GlyCicp);

    //=========================================================================
    // GlyCreator
    //=========================================================================
    pub fn gly_creator_get_type() -> GType;
    pub fn gly_creator_new(
        mime_type: *const c_char,
        error: *mut *mut glib::GError,
    ) -> *mut GlyCreator;
    pub fn gly_creator_add_frame(
        creator: *mut GlyCreator,
        width: u32,
        height: u32,
        memory_format: GlyMemoryFormat,
        texture: *mut glib::GBytes,
        error: *mut *mut glib::GError,
    ) -> *mut GlyNewFrame;
    pub fn gly_creator_add_frame_with_stride(
        creator: *mut GlyCreator,
        width: u32,
        height: u32,
        stride: u32,
        memory_format: GlyMemoryFormat,
        texture: *mut glib::GBytes,
        error: *mut *mut glib::GError,
    ) -> *mut GlyNewFrame;
    pub fn gly_creator_add_metadata_key_value(
        creator: *mut GlyCreator,
        key: *const c_char,
        value: *const c_char,
    ) -> gboolean;
    pub fn gly_creator_create(
        image: *mut GlyCreator,
        error: *mut *mut glib::GError,
    ) -> *mut GlyEncodedImage;
    pub fn gly_creator_create_async(
        creator: *mut GlyCreator,
        cancellable: *mut gio::GCancellable,
        callback: gio::GAsyncReadyCallback,
        user_data: gpointer,
    );
    pub fn gly_creator_create_finish(
        creator: *mut GlyCreator,
        result: *mut gio::GAsyncResult,
        error: *mut *mut glib::GError,
    ) -> *mut GlyEncodedImage;
    pub fn gly_creator_set_encoding_compression(
        creator: *mut GlyCreator,
        compression: u8,
    ) -> gboolean;
    pub fn gly_creator_set_encoding_quality(creator: *mut GlyCreator, quality: u8) -> gboolean;
    pub fn gly_creator_set_sandbox_selector(
        creator: *mut GlyCreator,
        sandbox_selector: GlySandboxSelector,
    ) -> gboolean;

    //=========================================================================
    // GlyEncodedImage
    //=========================================================================
    pub fn gly_encoded_image_get_type() -> GType;
    pub fn gly_encoded_image_get_data(encoded_image: *mut GlyEncodedImage) -> *mut glib::GBytes;

    //=========================================================================
    // GlyFrame
    //=========================================================================
    pub fn gly_frame_get_type() -> GType;
    pub fn gly_frame_get_buf_bytes(frame: *mut GlyFrame) -> *mut glib::GBytes;
    pub fn gly_frame_get_color_cicp(frame: *mut GlyFrame) -> *mut GlyCicp;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_frame_get_color_icc_profile(frame: *mut GlyFrame) -> *mut glib::GBytes;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_frame_get_color_mode(frame: *mut GlyFrame) -> GlyColorMode;
    pub fn gly_frame_get_delay(frame: *mut GlyFrame) -> i64;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_frame_get_details(frame: *mut GlyFrame) -> *mut GlyFrameDetails;
    pub fn gly_frame_get_height(frame: *mut GlyFrame) -> u32;
    pub fn gly_frame_get_memory_format(frame: *mut GlyFrame) -> GlyMemoryFormat;
    pub fn gly_frame_get_stride(frame: *mut GlyFrame) -> u32;
    pub fn gly_frame_get_width(frame: *mut GlyFrame) -> u32;

    //=========================================================================
    // GlyFrameDetails
    //=========================================================================
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_frame_details_get_type() -> GType;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_frame_details_get_pixel_density(
        frame_details: *mut GlyFrameDetails,
    ) -> *mut GlyPixelDensity;

    //=========================================================================
    // GlyFrameRequest
    //=========================================================================
    pub fn gly_frame_request_get_type() -> GType;
    pub fn gly_frame_request_new() -> *mut GlyFrameRequest;
    pub fn gly_frame_request_set_loop_animation(
        frame_request: *mut GlyFrameRequest,
        loop_animation: gboolean,
    );
    pub fn gly_frame_request_set_scale(
        frame_request: *mut GlyFrameRequest,
        width: u32,
        height: u32,
    );

    //=========================================================================
    // GlyImage
    //=========================================================================
    pub fn gly_image_get_type() -> GType;
    pub fn gly_image_get_height(image: *mut GlyImage) -> u32;
    pub fn gly_image_get_metadata_key_value(
        image: *mut GlyImage,
        key: *const c_char,
    ) -> *mut c_char;
    pub fn gly_image_get_metadata_keys(image: *mut GlyImage) -> *mut *mut c_char;
    pub fn gly_image_get_mime_type(image: *mut GlyImage) -> *const c_char;
    pub fn gly_image_get_specific_frame(
        image: *mut GlyImage,
        frame_request: *mut GlyFrameRequest,
        error: *mut *mut glib::GError,
    ) -> *mut GlyFrame;
    pub fn gly_image_get_specific_frame_async(
        image: *mut GlyImage,
        frame_request: *mut GlyFrameRequest,
        cancellable: *mut gio::GCancellable,
        callback: gio::GAsyncReadyCallback,
        user_data: gpointer,
    );
    pub fn gly_image_get_specific_frame_finish(
        image: *mut GlyImage,
        result: *mut gio::GAsyncResult,
        error: *mut *mut glib::GError,
    ) -> *mut GlyFrame;
    pub fn gly_image_get_transformation_orientation(image: *mut GlyImage) -> u16;
    pub fn gly_image_get_width(image: *mut GlyImage) -> u32;
    pub fn gly_image_next_frame(
        image: *mut GlyImage,
        error: *mut *mut glib::GError,
    ) -> *mut GlyFrame;
    pub fn gly_image_next_frame_async(
        image: *mut GlyImage,
        cancellable: *mut gio::GCancellable,
        callback: gio::GAsyncReadyCallback,
        user_data: gpointer,
    );
    pub fn gly_image_next_frame_finish(
        image: *mut GlyImage,
        result: *mut gio::GAsyncResult,
        error: *mut *mut glib::GError,
    ) -> *mut GlyFrame;

    //=========================================================================
    // GlyLoader
    //=========================================================================
    pub fn gly_loader_get_type() -> GType;
    pub fn gly_loader_new(file: *mut gio::GFile) -> *mut GlyLoader;
    pub fn gly_loader_new_for_bytes(bytes: *mut glib::GBytes) -> *mut GlyLoader;
    pub fn gly_loader_new_for_stream(stream: *mut gio::GInputStream) -> *mut GlyLoader;
    pub fn gly_loader_get_mime_types() -> *mut *mut c_char;
    pub fn gly_loader_get_mime_types_async(
        cancellable: *mut gio::GCancellable,
        callback: gio::GAsyncReadyCallback,
        user_data: gpointer,
    );
    pub fn gly_loader_get_mime_types_finish(
        result: *mut gio::GAsyncResult,
        error: *mut *mut glib::GError,
    ) -> *mut *mut c_char;
    pub fn gly_loader_load(loader: *mut GlyLoader, error: *mut *mut glib::GError) -> *mut GlyImage;
    pub fn gly_loader_load_async(
        loader: *mut GlyLoader,
        cancellable: *mut gio::GCancellable,
        callback: gio::GAsyncReadyCallback,
        user_data: gpointer,
    );
    pub fn gly_loader_load_finish(
        loader: *mut GlyLoader,
        result: *mut gio::GAsyncResult,
        error: *mut *mut glib::GError,
    ) -> *mut GlyImage;
    pub fn gly_loader_set_accepted_memory_formats(
        loader: *mut GlyLoader,
        memory_format_selection: GlyMemoryFormatSelection,
    );
    pub fn gly_loader_set_apply_transformations(
        loader: *mut GlyLoader,
        apply_transformations: gboolean,
    );
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_loader_set_color_convert_icc_srgb(loader: *mut GlyLoader, convert: gboolean);
    pub fn gly_loader_set_sandbox_selector(
        loader: *mut GlyLoader,
        sandbox_selector: GlySandboxSelector,
    );

    //=========================================================================
    // GlyNewFrame
    //=========================================================================
    pub fn gly_new_frame_get_type() -> GType;
    pub fn gly_new_frame_set_color_icc_profile(
        new_frame: *mut GlyNewFrame,
        icc_profile: *mut glib::GBytes,
    ) -> gboolean;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_new_frame_set_pixel_density(
        new_frame: *mut GlyNewFrame,
        pixel_density: *mut GlyPixelDensity,
    );
